omni/tests/goldens/types/undefined_ident_08.omni
let result8:int = missing8
